tests/NormalTests/paczka1/fuzzy1/46308108.err
Error in line 3: bk9CrPdI3k S363 27,0
Error in line 10: Q2HMFd A520 36,5
Error in line 28: 0xGgCRqE2W S363 41,8
Error in line 21: Q2HMFd A622 20,9
